js data types added

--- a/Javascript/Theory/4.md
+++ b/Javascript/Theory/4.md
@@ -1,4 +1,5 @@
 🔹 1. Whitespace
+    Whitespace refers to characters that provide the space between other characters.
 Includes: space, tab, newline, carriage return.
 Ignored by JS engine, but improves code readability.
 
@@ -7,6 +8,7 @@ let x=10;if(x){console.log(x);} // Works, but hard to read
 
 
 🔹 2. Statements
+    A statement is a piece of code that either declares a variable or instructs the JavaScript engine to perform a task.
 Instructions for the JS engine, usually end with ;
 
 let msg = "Hello";
@@ -23,6 +25,7 @@ if (x > 0) {
 
 
 🔹 4. Identifiers
+An identifier is a name you choose for variables, parameters, functions, classes, etc.
 Names for variables, functions, etc.
 
 Must begin with a letter, _, or $
@@ -33,12 +36,12 @@ Case-sensitive: Name ≠ name
 
 
 🔹 5. Comments
+Comments allow you to include notes or hints in JavaScript code. When executing the code, the JavaScript engine ignores the comments.
 Used for documentation, ignored by JS engine
 
 Single-line: // this is a comment
 
 Multi-line:
-
 /* This is
    a multi-line comment */
 
@@ -62,6 +65,7 @@ Future reserved words: enum, await, implements, etc.
 
 ✅ Summary Cheat Sheet
 Concept	Key Points
+
 Whitespace	Use for readability
 Statements	End with ;
 Blocks	Use {} to group code
