--- a/Javascript/Theory/13.md
+++ b/Javascript/Theory/13.md
@@ -97,4 +97,4 @@ Can also work with custom objects implementing Symbol.search.
 🔗 Navigation
 🔙 [Back to JavaScript String Methods](./12.md)
 
-⏭️ Next: indexOf() →(./13.md)
+⏭️ [Next: indexOf() →](./13.md)
